Fix styles on home

--- a/_posts/2016-01-01-intro.md
+++ b/_posts/2016-01-01-intro.md
@@ -5,11 +5,14 @@ color: black
 style: center
 ---
 
+<div class="sectiondivider2">
+  <div class="me"></div>
+</div>
+
 # Guilherme Pereira
 {: .text-black}
-<div class="me sectioncenter">&nbsp;</div>
 
-<div class="container center">
+<div class="container center padding-left-20">
   <div class="">
       <a class="intro-social-link twitter" href="http://twitter.com/guiferrpereira" target="_blank" style="padding:10px; color: #f8f8f8;">
           <i style="font-size: 100px; color: #2C4762;" class="fa fa-twitter">&nbsp;</i>
