--- a/_posts/2016-01-01-intro.md
+++ b/_posts/2016-01-01-intro.md
@@ -14,16 +14,17 @@ style: center
 
 <div class="container center padding-left-20">
   <div class="">
+      <a class="intro-social-link twitter" href="mailto:guiferrpereira@gmail.com" target="_top" style="padding:10px; color: #f8f8f8;">
+          <i style="font-size: 80px; color: #444444;" class="fa fa-envelope">&nbsp;</i>
+      </a>
       <a class="intro-social-link twitter" href="http://twitter.com/guiferrpereira" target="_blank" style="padding:10px; color: #f8f8f8;">
-          <i style="font-size: 100px; color: #2C4762;" class="fa fa-twitter">&nbsp;</i>
+          <i style="font-size: 80px; color: #2C4762;" class="fa fa-twitter">&nbsp;</i>
       </a>
-
       <a class="intro-social-link" href="https://github.com/guiferrpereira" target="_blank" style="padding:10px; color: #f8f8f8;">
-          <i style="font-size: 100px; color: #444444;" class="fa fa-github">&nbsp;</i>
+          <i style="font-size: 80px; color: #444444;" class="fa fa-github">&nbsp;</i>
       </a>
-
       <a class="intro-social-link" href="https://pt.linkedin.com/in/guilhermep" target="_blank" style="padding:10px; color: #f8f8f8;">
-          <i style="font-size: 100px; color: #007BB6;" class="fa fa-linkedin">&nbsp;</i>
+          <i style="font-size: 80px; color: #007BB6;" class="fa fa-linkedin">&nbsp;</i>
       </a>
   </div>
 </div>
